# youtube2podcast

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PROJECT.md  QUICK_START.md  README.md  RELEASES.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  config.py  config.yaml.dist  crontab  docker-compose.yml  manage_sources.py  multi_downloader.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  start.sh  test-docker.sh  test_config.py  test_dependencies.py  test_dry_run.py  test_playlist_extraction.py  test_rss_preview.py  test_video_extraction.py
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  debug.yml  test.yml
examples/: add_source_example.py
tests/: __init__.py  test_basic.py  test_imports.py  test_main.py
