[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube2podcast"
version = "1.0.0"
description = "YouTube to Podcast converter with RSS feed generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "tooeo", email = ""}
]
maintainers = [
    {name = "tooeo", email = ""}
]
keywords = ["youtube", "podcast", "rss", "audio", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.12.09",
    "ffmpeg-python>=0.2.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/tooeo/youtube2podcast"
Repository = "https://github.com/tooeo/youtube2podcast"
Documentation = "https://github.com/tooeo/youtube2podcast#readme"
"Bug Tracker" = "https://github.com/tooeo/youtube2podcast/issues"

[project.scripts]
youtube2podcast = "main:main"
youtube2podcast-loop = "main_loop:main_loop"
youtube2podcast-channel = "channel_downloader:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=youtube2podcast",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
